--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -16,7 +16,7 @@ body {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 600px 600px 200px 800px 200px 70px 100px ;
+    grid-template-rows: 650px 600px 200px 800px 200px 70px 100px ;
     grid-template-areas: 
     /* "header header header header header" */
     "search search search search search"
@@ -31,10 +31,7 @@ body {
 .home__header {
     position: absolute;
 }
-.home__search {
-    grid-area: search;
-    background: darkcyan;
-}
+
 .home__verificados {
     grid-area: verificados;
     background: rgb(39, 39, 39);
@@ -59,3 +56,73 @@ body {
     grid-area: footer;
     background: #F75757;
 }
+
+/* //////////////home search/////////////// */
+.home__search {
+    grid-area: search;
+    background: darkcyan;
+    background-image: url('../../public/assets/home-1.jpg');
+    object-fit: cover;
+    background-size: 100% auto;
+    background-position: 10% 48%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.home__search > article {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5em;
+}
+.home__search--nombre {
+color: var(--color-white);
+font-size: 3.125em;
+}
+.home__search--input {
+/* width: 900px ; */
+width: 62.5em ;
+/* min-width: 400px; */
+min-height: 5em;
+background: var(--color-white);
+border-radius: 2.5em;
+display: flex;
+justify-content: space-between;
+align-items: center;
+
+}
+.input__select {
+width: 12.375em;
+height: 3.125em;
+/* background: red; */
+display: flex;
+justify-content: end;
+align-items: center;
+/* margin-left: 1.25em; */
+}
+.input__select > p {
+    color: gray;
+    font-size: 20px;
+    cursor: pointer;
+}
+.input__logo {
+width: 5.625em;
+height: 3.75em;
+background: var(--color-nav);
+border-radius: 2.5em;
+cursor: pointer;
+display: flex;
+justify-content: center;
+align-items: center;
+margin-right: 1.25em;
+
+}
+.input__logo > i {
+    color: var(--color-white);
+    font-size: 1.875em;
+
+}
+
