--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5,6 +5,7 @@
     --color-line : #E3E2E2; 
     --color-dark : #2D2D2C;
     --color-nav  : #F75757;
+    --color-gray : rgb(182, 181, 181);
 }
 
 
@@ -16,7 +17,7 @@ body {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 650px 600px 200px 800px 200px 70px 100px ;
+    grid-template-rows: 650px 900px 200px 800px 200px 70px 100px ;
     grid-template-areas: 
     /* "header header header header header" */
     "search search search search search"
@@ -30,11 +31,14 @@ body {
 }
 .home__header {
     position: absolute;
+    z-index: 10;
 }
 
 .home__verificados {
     grid-area: verificados;
-    background: rgb(39, 39, 39);
+    background: var(--color-white);
+    position: relative;
+    z-index: 9;
 }
 .home__lugares {
     grid-area: lugares;
@@ -53,145 +57,7 @@ body {
     background: rgb(65, 65, 66);  
 }
 
-/* ////////////////////////////////footer////////////////////////// */
 
-.home__footer > article{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    }
-.home__footer {
-    grid-area: footer;
-    width: 100%;
-    height: 300px;
-    background: var(--color-dark);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.footer__title{
-/* min-width: 80%; */
-height: 50px;
-/* background: #F75757; */
-display: flex;
-justify-content: center;
-align-items: center;
-}
-.footer__title--1{
-    width: 80%;
-    height: 100%;
-    border-bottom: 3px solid rgb(56, 56, 56);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
-.footer__title--1 > img {
-    width: 19%;
-}
-.footer__title--1 > div {
-    /* transform: translate(-450px); */
- position: absolute;
- left: 0;
- display: flex;
- gap: 20px;
-}
-.title__logo--instagram{
-display: flex;
-justify-content: center;
-align-items: center;
-}
-.title__logo--instagram > i{
-color: var(--color-white);
-font-size: 20px;
-}
-.title__logo--facebook{
-display: flex;
-justify-content: center;
-align-items: center; 
-}
-.title__logo--facebook > i {
-color: var(--color-white);
-font-size: 20px;
-}
-.title__logo--twitter{
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-}
-.title__logo--twitter > i{
-    color: var(--color-white);
-    font-size: 20px;
-}
-.footer__suscribe{
-/* min-width: 80%; */
-height: 180px;
-/* background: green; */
-display: flex;
-justify-content: center;
-align-items: center;
-}
-.footer__suscribe--1{
-width: 80%;
-height: 100%;
-border-bottom: 3px solid rgb(56, 56, 56);
-display: flex;
-}
-.uno__direccion{
-width: 25%;
-height: 100%;
-background: #F75757;
-}
-.uno__lista{
-width: 25%;
-height: 100%;
-background: #5762f7;
-}
-.uno__lista > ul {
-display: flex;
-flex-direction: column;
-gap: 15px;
-align-items: center;
-margin-top: 10px;
-color: var(--color-white);
-}
-.uno__email{
-width: 50%;
-height: 100%;
-background: #524646;
-}
-
-.footer__derechos{
-/* min-width: 80%; */
-height: 50px;
-display: flex;
-justify-content: center;
-align-items: center;
-}
-.footer__derechos--1{
-    width: 80%;
-    height: 100%;
-    /* background: red; */
-    display: flex;
-    align-items: center;
-    color: var(--color-white);
-    justify-content: space-between;
-}
-.footer__derechos--1 > p{
-   cursor: pointer;
-}
-.logo1{
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    background: rgb(56, 56, 56);
-    cursor: pointer;
-}
-
-/* ////////////////////////////////footer////////////////////////// */
 
 /* //////////////home search/////////////// */
 .home__search {
@@ -215,12 +81,15 @@ align-items: center;
     gap: 5em;
 }
 .home__search--nombre {
+width: 100%;
 color: var(--color-white);
 font-size: 3.125em;
+text-align: center;
 }
 .home__search--input {
 /* width: 900px ; */
-width: 62.5em ;
+/* width: 62.5em ; */
+width: 50%;
 /* min-width: 400px; */
 min-height: 5em;
 background: var(--color-white);
@@ -261,4 +130,15 @@ margin-right: 1.25em;
     font-size: 1.875em;
 
 }
+/* //////////////home search/////////////// */
 
+.home__footer {
+    grid-area: footer;
+    width: 100%;
+    height: 300px;
+    background: var(--color-dark);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
