--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,11 +1,9 @@
-
-
 :root {
     --color-white: #FFFFFF;
-    --color-line : #E3E2E2; 
-    --color-dark : #2D2D2C;
-    --color-nav  : #F75757;
-    --color-gray : rgb(182, 181, 181);
+    --color-line: #E3E2E2;
+    --color-dark: #2D2D2C;
+    --color-nav: #F75757;
+    --color-gray: rgb(182, 181, 181);
 }
 
 
@@ -13,22 +11,24 @@ body {
     background: var(--color-white);
 }
 
-.home__container{
+.home__container {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 650px 900px 200px 800px 200px 70px 100px ;
-    grid-template-areas: 
-    /* "header header header header header" */
-    "search search search search search"
-    "verificados verificados verificados verificados verificados"
-    "lugares lugares lugares lugares lugares"
-    "randon randon randon randon randon"
-    "publica publica publica publica publica"
-    "img img img img img"
-    "footer footer footer footer footer"
-;
+    grid-template-rows: 650px 950px 600px 2fr 3fr 900px 100px;
+    /* grid-template-rows: 2fr 3fr 2fr 3fr 2fr 1fr 1fr; */
+    grid-template-areas:
+        /* "header header header header header" */
+        "search search search search search"
+        "verificados verificados verificados verificados verificados"
+        "lugares lugares lugares lugares lugares"
+        "randon randon randon randon randon"
+        "publica publica publica publica publica"
+        "img img img img img"
+        "footer footer footer footer footer"
+    ;
 }
+
 .home__header {
     position: absolute;
     z-index: 10;
@@ -39,39 +39,68 @@ body {
     background: var(--color-white);
     position: relative;
     z-index: 9;
-}
-.home__lugares {
-    grid-area: lugares;
-    background: rgb(136, 7, 7);
-}
-.home__randon {
-    grid-area: randon;
-    background: rgb(7, 9, 136);  
-}
-.home__publica {
-    grid-area: publica;
-    background: rgb(125, 7, 136);  
-}
-.home__img {
-    grid-area: img;
-    background: rgb(65, 65, 66);  
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
+.home__lugares {
+    grid-area: lugares;
+    background: var(--color-nav);
+    z-index: 8;
+}
+
+.home__randon {
+    grid-area: randon;
+    /* background: rgb(7, 9, 136); */
+    z-index: 7;
+}
+
+.home__publica {
+    grid-area: publica;
+    z-index: 6;
+    /* background: rgb(125, 7, 136); */
+}
+
+.home__publica>article {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.home__img {
+    grid-area: img;
+    z-index: 5;
+    /* background: rgb(65, 65, 66); */
+}
+.home__img>article {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+/* ///////////////publica////////////// */
+
+
+/* ///////////////publica////////////// */
 
 
 /* //////////////home search/////////////// */
 .home__search {
     grid-area: search;
-    background: darkcyan;
+    background: transparent;
     background-image: url('../../public/assets/home-1.jpg');
     object-fit: cover;
+    background-repeat: no-repeat;
     background-size: 100% auto;
     background-position: 10% 48%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.home__search > article {
+
+.home__search>article {
     width: 100%;
     height: 100%;
     display: flex;
@@ -80,56 +109,63 @@ body {
     align-items: center;
     gap: 5em;
 }
+
 .home__search--nombre {
-width: 100%;
-color: var(--color-white);
-font-size: 3.125em;
-text-align: center;
+    width: 100%;
+    color: var(--color-white);
+    font-size: 3.125em;
+    text-align: center;
 }
+
 .home__search--input {
-/* width: 900px ; */
-/* width: 62.5em ; */
-width: 50%;
-/* min-width: 400px; */
-min-height: 5em;
-background: var(--color-white);
-border-radius: 2.5em;
-display: flex;
-justify-content: space-between;
-align-items: center;
+    /* width: 900px ; */
+    /* width: 62.5em ; */
+    width: 50%;
+    /* min-width: 400px; */
+    min-height: 5em;
+    background: var(--color-white);
+    border-radius: 2.5em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
 }
+
 .input__select {
-width: 12.375em;
-height: 3.125em;
-/* background: red; */
-display: flex;
-justify-content: end;
-align-items: center;
-/* margin-left: 1.25em; */
+    width: 12.375em;
+    height: 3.125em;
+    /* background: red; */
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    /* margin-left: 1.25em; */
 }
-.input__select > p {
+
+.input__select>p {
     color: gray;
     font-size: 20px;
     cursor: pointer;
 }
+
 .input__logo {
-width: 5.625em;
-height: 3.75em;
-background: var(--color-nav);
-border-radius: 2.5em;
-cursor: pointer;
-display: flex;
-justify-content: center;
-align-items: center;
-margin-right: 1.25em;
+    width: 5.625em;
+    height: 3.75em;
+    background: var(--color-nav);
+    border-radius: 2.5em;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1.25em;
 
 }
-.input__logo > i {
+
+.input__logo>i {
     color: var(--color-white);
     font-size: 1.875em;
 
 }
+
 /* //////////////home search/////////////// */
 
 .home__footer {
