--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -14,7 +14,7 @@
     animation-name: desvanecer;
     animation-duration: 2s;
     animation-timing-function: linear;
-
+/* font-size: 8px; */
 }
 .header__nav > ul{
     width: 100%;
@@ -24,20 +24,24 @@
     pointer-events: none;
     user-select: none;
     gap: -10px;
+    
 }
 .header__nav > ul > li{
     /* width: 100%; */
     position: relative;
     pointer-events: all;
     transition: all 0.2s ;
+   
     }
 .header__nav > ul > li > a{
     transition: all 0.2s ;
     color: var(--color-white);
+    
     }
 .header__nav > ul > li > div > a{
     transition: all 1s ;
     color: var(--color-white);
+   
     }
 .header__nav-1{
     width: 100%;
@@ -94,16 +98,20 @@
     text-decoration: none;
     transition: all 1s;
 }
-.header__nav > ul > li > a:hover {
+.header__nav > ul > li > a:hover,
+.header__nav-1 > ul > li > a:hover {
     color: var(--color-nav);
     transition: all 1s;
 }
-.header__nav > ul > li > div > a:hover {
+.header__nav > ul > li > div > a:hover,
+.header__nav-1 > ul > li > div > a:hover {
     color: var(--color-nav);
     transition: all 1s;
 }
 /* ///////////////////////// */
-.header__nav > ul > li > a::before{
+.header__nav > ul > li > a::before,
+.header__nav-1 > ul > li > a::before
+{
     position: absolute;
     content: "";
     width: 0%;
@@ -115,7 +123,8 @@
     border-radius: 5px;
     transition: all 1s ;
 }
-.header__nav ul li:hover a::before  {
+.header__nav ul li:hover a::before,
+.header__nav-1 ul li:hover a::before   {
     width: 100%;
     /* left: 0; */
     left: 0;
