--- a/src/styles/verificados.css
+++ b/src/styles/verificados.css
@@ -2,24 +2,21 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
 }
 
 .home__verificados--titulo {
    
     width: 100%;
-    height: 150px;
-    /* background: red; */
+    height: 9.375em;
     display: flex;
     justify-content: space-between;
-    padding: 100px;
-    margin-bottom: 50px;
+    padding: 6.25em;
+    margin-bottom: 4.375em;
 }
 .titulo__primero{
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 1.875em;
 }
 .titulo__primero > h1 {
     font-size: 35px;
@@ -28,36 +25,22 @@
 }
 .titulo__primero > h1::before {
     content: '';
-    width: 100px;
+    width: 6.25em;
     position: absolute;
     bottom: 0;
     border-bottom: 6px solid var(--color-nav);
     transform: translateY(15px);
- 
-    
 }
 .titulo__primero > p {
     font-size: 20px;
     color: var(--color-gray);
 }
-.titulo__boton {
-width: 25%;
-height: 70px;
-background: var(--color-nav);
-display: flex;
-justify-content: center;
-align-items: center;
-color: var(--color-white);
-border-radius: 2.5em;
-}
-.titulo__boton > i {
-    margin-left: 10px;
-}
+
 .home__verificados--arrendamiento {
     width: 100%;
     height: 50%;
     /* background: rgb(17, 17, 17); */
-    padding: 50px;
+    padding: 3.125em;
     display: flex;
     justify-content: space-between;
 }
@@ -67,15 +50,15 @@ border-radius: 2.5em;
     /* background: rgb(0, 204, 255); */
     display: flex;
     justify-content: center;
-    align-items: flex-end;
-    gap: 45px;
+    align-items: center;
+    gap: 2.8125em;
     /* margin-bottom: 50px; */
 }
 .paginacion__li {
-    width: 15px;
-    height: 15px;
+    width: 0.9375em;
+    height: 0.9375em;
     background: var(--color-gray);
-    border-radius: 50px;
+    border-radius: 3.125em;
     cursor: pointer;
     /* margin-bottom: 50px; */
 }
