--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -15,10 +15,10 @@ body {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 650px 950px 600px 2fr 3fr 900px 100px;
+    grid-template-rows: 0px  40.625rem 59.375rem 37.5rem 2fr 3fr 56.25rem 6.25rem;
     /* grid-template-rows: 2fr 3fr 2fr 3fr 2fr 1fr 1fr; */
     grid-template-areas:
-        /* "header header header header header" */
+        "header header header header header"
         "search search search search search"
         "verificados verificados verificados verificados verificados"
         "lugares lugares lugares lugares lugares"
@@ -27,18 +27,25 @@ body {
         "img img img img img"
         "footer footer footer footer footer"
     ;
+    position: relative;
 }
 
 .home__header {
+    width: 100%;
+    background: transparent;
     position: absolute;
-    z-index: 10;
+    z-index: 9;
+     display: flex;
+    justify-content: center;
+    top: 0;
+
 }
 
 .home__verificados {
     grid-area: verificados;
     background: var(--color-white);
     position: relative;
-    z-index: 9;
+    z-index: 8;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -47,18 +54,18 @@ body {
 .home__lugares {
     grid-area: lugares;
     background: var(--color-nav);
-    z-index: 8;
+    z-index: 7;
 }
 
 .home__randon {
     grid-area: randon;
     /* background: rgb(7, 9, 136); */
-    z-index: 7;
+    z-index: 6;
 }
 
 .home__publica {
     grid-area: publica;
-    z-index: 6;
+    z-index: 5;
     /* background: rgb(125, 7, 136); */
 }
 
@@ -70,9 +77,10 @@ body {
 
 .home__img {
     grid-area: img;
-    z-index: 5;
+    z-index: 4;
     /* background: rgb(65, 65, 66); */
 }
+
 .home__img>article {
     width: 100%;
     display: flex;
@@ -80,6 +88,7 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 /* ///////////////publica////////////// */
 
 
@@ -88,6 +97,8 @@ body {
 
 /* //////////////home search/////////////// */
 .home__search {
+    width: 100%;
+    height: auto;
     grid-area: search;
     background: transparent;
     background-image: url('../../public/assets/home-1.jpg');
@@ -113,43 +124,42 @@ body {
 .home__search--nombre {
     width: 100%;
     color: var(--color-white);
-    font-size: 3.125em;
+    font-size: calc(1.9em + 1.9vw);
+    line-height: 45px;
     text-align: center;
 }
 
 .home__search--input {
-    /* width: 900px ; */
-    /* width: 62.5em ; */
+
     width: 50%;
-    /* min-width: 400px; */
-    min-height: 5em;
+    min-height: calc(2.8em + 2.8vw);
     background: var(--color-white);
     border-radius: 2.5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .input__select {
-    width: 12.375em;
-    height: 3.125em;
-    /* background: red; */
+    width: calc(6.8em + 6.7vw);
+    height: calc(2.8em + 0.7vw);
+    font-size: calc(0.8em + 0.7vw);
     display: flex;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
-    /* margin-left: 1.25em; */
+    margin-left: 20px;
+    text-align: center;
 }
 
 .input__select>p {
     color: gray;
-    font-size: 20px;
+    font-size: calc(0.8em + 0.7vw);
     cursor: pointer;
 }
 
 .input__logo {
-    width: 5.625em;
-    height: 3.75em;
+    width: calc(3em + 3vw);
+    height: calc(2em + 2vw);
     background: var(--color-nav);
     border-radius: 2.5em;
     cursor: pointer;
@@ -162,7 +172,8 @@ body {
 
 .input__logo>i {
     color: var(--color-white);
-    font-size: 1.875em;
+    font-size: calc(1.3em + 1.3vw);
+
 
 }
 
@@ -177,4 +188,169 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+@media screen and (max-width:1000px) {
+    .home__search {
+        background-size: 100%;
+        background-position: 10% 0%;
+
+    }
+
+}
+@media screen and (max-width:800px) {
+    .home__container {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: 0px  40.625rem 95.375rem 37.5rem 2fr 3fr 56.25rem 6.25rem;
+        /* grid-template-rows: 2fr 3fr 2fr 3fr 2fr 1fr 1fr; */
+        grid-template-areas:
+            "header header header header header"
+            "search search search search search"
+            "verificados verificados verificados verificados verificados"
+            "lugares lugares lugares lugares lugares"
+            "randon randon randon randon randon"
+            "publica publica publica publica publica"
+            "img img img img img"
+            "footer footer footer footer footer"
+        ;
+        position: relative;
+    }
+ 
+
+}
+
+@media screen and (max-width:700px) {
+    .home__search>article {
+        justify-content: start;
+        align-items: center;
+        gap: 1em;
+        margin-top: 200px;
+    }
+
+}
+
+@media screen and (max-width:500px) {
+    .home__search {
+        width: 100%;
+        height: 100%;
+        background-size: 100% auto;
+        background-position: 0% 0%;
+
+    }
+
+    
+
+    .home__search--nombre {
+
+        font-size: calc(0.8em + 0.8vw);
+        line-height: 45px;
+
+    }
+
+    .home__search--input {
+        width: 70%;
+        min-height: calc(2.3em + 2.3vw);
+    }
+
+    .input__select {
+        width: calc(10em + 10vw);
+        height: calc(2.8em + 0.7vw);
+        font-size: calc(0.6em + 0.6vw);
+    }
+}
+
+@media screen and (max-width:500px) {
+
+    .home__container {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: 0px  40.625rem 95.375rem 37.5rem 2fr 3fr 56.25rem 6.25rem;
+        /* grid-template-rows: 2fr 3fr 2fr 3fr 2fr 1fr 1fr; */
+        grid-template-areas:
+            "header header header header header"
+            "search search search search search"
+            "verificados verificados verificados verificados verificados"
+            "lugares lugares lugares lugares lugares"
+            "randon randon randon randon randon"
+            "publica publica publica publica publica"
+            "img img img img img"
+            "footer footer footer footer footer"
+        ;
+        position: relative;
+    }
+
+    .home__search>article {
+        gap: 1em;
+        margin-top: 100px;
+    }
+}
+
+@media screen and (max-width:400px) {
+
+    .input__select {
+        width: calc(6.8em + 6.7vw);
+        height: calc(1.5em + 1vw);
+        font-size: calc(0.8em + 0.7vw);
+    }
+
+    .input__logo {
+        width: calc(2.2em + 2.2vw);
+        height: calc(1.5em + 2vw);
+    }
+
+    .input__logo>i {
+        color: var(--color-white);
+        font-size: calc(0.8em + 0.8vw);
+    }
+
+    .home__search>article {
+        gap: 1em;
+        margin-top: 100px;
+    }
+
+    .home__search--nombre {
+
+        line-height: 25px;
+
+    }
+}
+
+@media screen and (max-width:300px) {
+ 
+    .home__container {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: 0px  40.625rem 95.375rem 37.5rem 2fr 3fr 56.25rem 6.25rem;
+        /* grid-template-rows: 2fr 3fr 2fr 3fr 2fr 1fr 1fr; */
+        grid-template-areas:
+            "header header header header header"
+            "search search search search search"
+            "verificados verificados verificados verificados verificados"
+            "lugares lugares lugares lugares lugares"
+            "randon randon randon randon randon"
+            "publica publica publica publica publica"
+            "img img img img img"
+            "footer footer footer footer footer"
+        ;
+        position: relative;
+    }
+    .input__select {
+        width: calc(6em + 6vw);
+        height: calc(1.5em + 1vw);
+        font-size: calc(0.5em + 0.5vw);
+    }
+
+    .input__logo {
+        width: calc(2em + 2vw);
+        height: calc(1.5em + 1.5vw);
+    }
+
+    .input__logo>i {
+        color: var(--color-white);
+        font-size: calc(0.8em + 0.8vw);
+    }
 }
