--- a/src/styles/lugares.css
+++ b/src/styles/lugares.css
@@ -4,19 +4,24 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .home__lugares--titulo {
     background: transparent;
     width: 100%;
-    /* height: 150px; */
-    display: flex;
+     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 6.25em;
-}
+ }
 
 .home__lugares--titulo > h1 {
-    color: var(--color-white);
-    font-size: 50px;
+    width: calc(20.5em + 20.5vw);
+     color: var(--color-white);
+    font-size: calc(1.5em + 1.5vw);
+    text-align: center;
+    line-height: 35px;
 }
 
 .home__lugares--logo {
@@ -24,14 +29,14 @@
     width: 100%;
     height: 18.75em;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 6.25em;
-    padding-top: 3.125em;
+    justify-content: center;
+     align-items: center;
+    gap: 5px;
+ 
 }
  .logo__habitacion{
-    width: 15.625em;
-    height: 15.625em;
+    width: calc(7.5em + 7.7vw);
+    height: calc(9.5em + 9.7vw);
     background: transparent;
     display: flex;
     justify-content: center;
@@ -39,7 +44,7 @@
     position: relative;
     z-index: 10;
      transition: all 0.3s ease;
-} 
+ } 
  .logo__habitacion::after {
     content: '';
     width: 15.625em;
@@ -79,7 +84,7 @@
 }
 .logo__habitacion--interno > p {
     transform: translateY(-20px);
-    font-size: 20px;
+    font-size: calc(0.5em + 0.7vw);
 } 
 
 .logo__apartaestudio--interno {
@@ -117,3 +122,73 @@
 }
 
 
+@media screen and (max-width:800px) {
+   
+    .logo__habitacion{
+        width: calc(6.5em + 6.7vw);
+        height: calc(6.5em + 6.7vw);
+      
+    } 
+    .logo__habitacion::after {
+        width: calc(6.5em + 6.7vw);
+        height: calc(6.5em + 6.7vw);
+    } 
+    .logo__habitacion--interno {
+        width: calc(6.5em + 6.7vw);
+        height: calc(8.5em + 8.7vw);
+      
+    } 
+    .logo__habitacion:hover{
+        width: calc(7.5em + 7.7vw);
+        height: calc(7.5em + 7.7vw);
+      
+    } 
+    }
+
+    @media screen and (max-width:600px) {
+   
+        .logo__habitacion{
+            width: calc(6.5em + 4.7vw);
+            height: calc(6.5em + 6.7vw);
+      
+        } 
+        .logo__habitacion::after {
+            width: calc(6.5em + 4.7vw);
+            height: calc(6.5em + 6.7vw);
+        } 
+        .logo__habitacion--interno {
+            width: calc(3.5em + 4.7vw);
+            height: calc(8.5em + 8.7vw);
+          
+        } 
+        .logo__habitacion--interno > p {
+            transform: translateY(-20px);
+            font-size: calc(0.4em + 0.4vw);
+        } 
+        .logo__habitacion:hover{
+            width: calc(7.5em + 4.7vw);
+            height: calc(7.5em + 6.7vw);
+          
+        } 
+        .home__lugares--logo {
+           
+            flex-wrap: wrap;
+           
+        }
+        }
+        @media screen and (max-width:400px) {
+            .home__lugares--logo {
+           
+                margin-top: -50px;
+               
+            }
+            .home__lugares--titulo {
+                margin-top: -150px;
+             }
+             .home__lugares--titulo > h1 {
+                width: calc(29.5em + 29.5vw);
+                 font-size: calc(1em + 1vw);
+                line-height: 25px;
+            
+            }
+        }
