--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,49 +1,66 @@
-
-.header__nav{
+.header__nav {
     width: 100%;
     height: 6.25em;
     background: transparent;
     display: flex;
     align-items: center;
     font-weight: 700;
- 
     color: var(--color-white);
-    position:fixed;
+    position: fixed;
     transition: all 0.2s;
-
     animation-name: desvanecer;
     animation-duration: 2s;
     animation-timing-function: linear;
-/* font-size: 8px; */
-}
-.header__nav > ul{
+
+    z-index: 10;
+ }
+
+.header__nav>ul {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content:space-around;
+    justify-content: space-around;
     pointer-events: none;
     user-select: none;
     gap: -10px;
-    
+
 }
-.header__nav > ul > li{
+
+.header__nav>ul>li {
     /* width: 100%; */
     position: relative;
     pointer-events: all;
-    transition: all 0.2s ;
-   
-    }
-.header__nav > ul > li > a{
-    transition: all 0.2s ;
+    transition: all 0.2s;
+    font-size: calc(0.4em + 0.5vw);
+
+}
+
+.header__nav>ul>li>a {
+    transition: all 0.2s;
     color: var(--color-white);
-    
-    }
-.header__nav > ul > li > div > a{
-    transition: all 1s ;
+
+}
+
+.header__nav>ul>li:nth-child(8) {
+    display: none;
+}
+
+.header__nav-1>ul>li:nth-child(8) {
+    display: none;
+}
+
+.header__nav>ul>li>div>a {
+    transition: all 1s;
     color: var(--color-white);
-   
-    }
-.header__nav-1{
+    font-size: calc(0.4em + 0.4vw);
+}
+.header__nav-1>ul>li>div>a {
+    transition: all 1s;
+    color: var(--negro);
+    font-size: calc(0.4em + 0.4vw);
+
+}
+.header__nav-1 {
     width: 100%;
     height: 6.25em;
     background: var(--color-white);
@@ -52,66 +69,77 @@
     font-weight: 700;
     color: var(--negro);
     transition: all 0.2s;
-    position:fixed;
-
+    position: fixed;
+ 
     animation-name: desvanecer;
     animation-duration: 2s;
     animation-timing-function: linear;
 }
-.header__nav-1 > ul{
+
+.header__nav-1>ul {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content:space-around;
+    justify-content: space-around;
     pointer-events: none;
     user-select: none;
 }
-.header__nav-1 > ul > li{
+
+.header__nav-1>ul>li {
     position: relative;
     pointer-events: all;
-    transition: all 0.2s ;
-    }
+    transition: all 0.2s;
+    font-size: calc(0.4em + 0.5vw);
 
-.header__nav--logo{
+}
+
+.header__nav--logo {
     /* width: 20em; */
     width: 22%;
     display: flex;
     justify-content: center;
     /* background: red; */
 }
-.header__nav--logo > img {
+
+.header__nav--logo>img {
     width: 90%;
     height: 90%;
     object-fit: cover;
 }
-.header__nav--auth{
+
+.header__nav--auth {
     width: 100%;
     display: flex;
     justify-content: center;
     gap: 1.25em;
+    font-size: calc(0.53em + 0.5vw);
 }
-.auth__ingresar{
+
+.auth__ingresar {
     padding-right: 1.25em;
     border-right: 2px solid var(--color-white);
 }
-.header__nav > ul > li a{
+
+.header__nav>ul>li a {
     text-decoration: none;
     transition: all 1s;
 }
-.header__nav > ul > li > a:hover,
-.header__nav-1 > ul > li > a:hover {
+
+.header__nav>ul>li>a:hover,
+.header__nav-1>ul>li>a:hover {
     color: var(--color-nav);
     transition: all 1s;
 }
-.header__nav > ul > li > div > a:hover,
-.header__nav-1 > ul > li > div > a:hover {
+
+.header__nav>ul>li>div>a:hover,
+.header__nav-1>ul>li>div>a:hover {
     color: var(--color-nav);
     transition: all 1s;
 }
+
 /* ///////////////////////// */
-.header__nav > ul > li > a::before,
-.header__nav-1 > ul > li > a::before
-{
+.header__nav>ul>li>a::before,
+.header__nav-1>ul>li>a::before {
     position: absolute;
     content: "";
     width: 0%;
@@ -121,33 +149,97 @@
     left: 50%;
     bottom: -4px;
     border-radius: 5px;
-    transition: all 1s ;
+    transition: all 1s;
 }
+
 .header__nav ul li:hover a::before,
-.header__nav-1 ul li:hover a::before   {
+.header__nav-1 ul li:hover a::before {
     width: 100%;
     /* left: 0; */
     left: 0;
-    transition: all 1s ;
+    transition: all 1s;
 }
+
 .activo {
 
     transition: all 0.2s;
     display: none;
 }
 
-
-
-
-
-
-
-
 @keyframes desvanecer {
-from{
-opacity: 0;
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
-to{
-opacity: 1;
+
+@media screen and (max-width:800px) {
+
+    .header__nav>ul>li:nth-child(2),
+    .header__nav>ul>li:nth-child(3),
+    .header__nav>ul>li:nth-child(4),
+    .header__nav>ul>li:nth-child(5),
+    .header__nav>ul>li:nth-child(6),
+    .header__nav-1>ul>li:nth-child(2),
+    .header__nav-1>ul>li:nth-child(3),
+    .header__nav-1>ul>li:nth-child(4),
+    .header__nav-1>ul>li:nth-child(5),
+    .header__nav-1>ul>li:nth-child(6) {
+        display: none;
+    }
+
+   
+    .header__nav>ul>li:nth-child(8) {
+        display: flex;
+    }
+    
+    .header__nav-1>ul>li:nth-child(8) {
+        display: flex;
+    }
+    .header__nav>ul>li:nth-child(8) > i {
+        font-size: calc(0.9em + 0.9vw);
+
+    }
+    
+    .header__nav-1>ul>li:nth-child(8) > i {
+        font-size: calc(0.9em + 0.9vw);
+
+    }
+    .header__nav>ul {
+        width: 88%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: -10px;
+    }
+    .header__nav-1>ul {
+        width: 88%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: -10px;
+    }
+    .header__nav{
+     }
 }
+
+
+@media screen and (max-width:500px) {
+    .header__nav {
+        height: 4em !important;
+    }
+  
+}
+
+@media screen and (max-width:400px) {
+    .header__nav {
+        position: absolute;
+    }
+    .header__nav-1 {
+        position: absolute;
+    }
+  
 }
