--- a/src/styles/randon.css
+++ b/src/styles/randon.css
@@ -1,7 +1,8 @@
 .home__randon>article {
+    width: 100%;
     display: flex;
     flex-direction: column;
-}
+ }
 
 .home__randon--titulo {
     width: 100%;
@@ -9,11 +10,14 @@
     justify-content: center;
     align-items: center;
     padding: 6.25em;
-    /* background: #867474; */
-}
+ }
 
 .home__randon--titulo>h1 {
-    font-size: 45px;
+    width: 100%;
+    font-size: calc(1.5em + 1.5vw);
+     text-align: center;
+    line-height: 35px;
+
 }
 
 .home__randon--filtros {
@@ -22,7 +26,7 @@
     justify-content: center;
     align-items: flex-end;
     position: relative;
-}
+ }
 .home__randon--filtros::after {
     content: '';
     width: 6%;
@@ -45,6 +49,8 @@
     color: var(--color-nav);
     cursor: pointer;
     transition: all 1s ease;
+    font-size: calc(0.5em + 0.4vw);
+
 }
 .home__randon--filtros>ul>li:hover {
     color: var(--color-dark);
@@ -68,7 +74,7 @@
     justify-content: space-evenly;
     padding: 3.125em;
     flex-wrap: wrap;
-}
+ }
 .home__randon--boton {
     width: 100%;
     display: flex;
@@ -76,4 +82,27 @@
     align-items: center;
     padding: 3.125em;
     padding-top: 0;
+}
+
+@media screen and (max-width:600px) {
+  
+    .home__randon--titulo>h1 {
+        font-size: calc(1em + 1.5vw);
+    }
+    .home__randon--filtros>ul {
+       
+        gap: 0.5em;
+        padding: 3.125em;
+        flex-wrap: wrap;
+    }
+    .home__randon--img {
+        /* background: red; */
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0em;
+       
+    }
 }
