--- a/src/styles/verificados.css
+++ b/src/styles/verificados.css
@@ -2,6 +2,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+     margin-top: -100px;
+
 }
 
 .home__verificados--titulo {
@@ -10,18 +12,21 @@
     height: 9.375em;
     display: flex;
     justify-content: space-between;
-    padding: 6.25em;
+    padding: 4.25em;
     margin-bottom: 4.375em;
+
 }
 .titulo__primero{
+    
     display: flex;
     flex-direction: column;
     gap: 1.875em;
-}
+ }
 .titulo__primero > h1 {
-    font-size: 35px;
-    position: relative;
-
+    font-size: calc(1.3em + 1.3vw);
+     position: relative;
+    width: 90%;
+    text-align: center;
 }
 .titulo__primero > h1::before {
     content: '';
@@ -32,8 +37,11 @@
     transform: translateY(15px);
 }
 .titulo__primero > p {
-    font-size: 20px;
+    font-size: calc(0.7em + 0.7vw);
+     position: relative;
+    width: 90%;
     color: var(--color-gray);
+    text-align: center;
 }
 
 .home__verificados--arrendamiento {
@@ -65,3 +73,81 @@
 .color {
     background: black;
 }
+
+@media screen and (max-width:800px) {
+  
+    .titulo__primero > h1 {
+        font-size: calc(1em + 1vw);
+      
+    }
+   
+    .titulo__primero > p {
+        font-size: calc(0.5em + 0.7vw);
+       
+    }
+
+    .home__verificados--arrendamiento {
+        width: 100%;
+        height: 100%;
+     
+        padding: 0em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-items: center;
+     }
+    .home__verificados--paginacion {
+        width: 100%;
+        height: 5%;
+        /* background: rgb(0, 204, 255); */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 2.8125em;
+        /* margin-bottom: 50px; */
+    }
+}
+@media screen and (max-width:600px) {
+   
+    .home__verificados {
+        
+        margin-top: -200px;
+    
+    }
+    }
+@media screen and (max-width:540px) {
+   
+    .home__verificados {
+        
+        margin-top: -200px;
+    
+    }
+    }
+    @media screen and (max-width:500px) {
+   
+        .home__verificados {
+            
+            margin-top: -300px;
+        
+        }
+        .home__verificados--titulo {
+   
+            width: 100%;
+            height: 9.375em;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            padding: 4.25em;
+            margin-bottom: 4.375em;
+            gap: 10px;
+        
+        }
+        .titulo__primero{
+           width: 120%;
+             display: flex;
+            justify-content: center;
+            align-items: center;
+         }
+        }
