--- a/src/styles/publicaAqui.css
+++ b/src/styles/publicaAqui.css
@@ -21,13 +21,16 @@
 
 .home__img--titulo>h1 {
     color: var(--color-white);
-    font-size: 60px;
+    font-size: calc(1.9em + 1.9vw);
     padding-bottom: 100px;
+     text-align: center;
+    line-height: 35px;
 }
 
 .home__img--subTitulo>h3 {
     color: var(--color-white);
-    font-size: 40px;
+    font-size: calc(1.4em + 1.4vw);
+    text-align: center;
 }
 
 .home__img--boton {
