--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -102,7 +102,7 @@ body {
     height: auto;
     grid-area: search;
     background: transparent;
-    background-image: url('../../public/assets/home-1.jpg');
+    background-image: url('https://user-images.githubusercontent.com/87577172/176919788-e5491eb9-6345-4f0d-b470-dd3054bfe6ec.jpg');
     object-fit: cover;
     background-repeat: no-repeat;
     background-size: 100% auto;
