--- a/src/styles/testimonio.css
+++ b/src/styles/testimonio.css
@@ -130,7 +130,7 @@
     height: 9.375em;
     border-radius: 50%;
     margin-top: 1.25em;
-    background-image: url('../../public/assets/testimonio/45bb4f31bd125fdcbca369e5405934cc77d4ad78.jpeg');
+    background-image: url('https://user-images.githubusercontent.com/87577172/176923524-bb5bf8b0-951c-4987-a182-0fe99c2988b7.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0px;
@@ -140,7 +140,7 @@
     height: 9.375em;
     border-radius: 50%;
     margin-top: 1.25em;
-    background-image: url('../../public/assets/testimonio/a4e77969e958d6239684e217c4f662028d5119ba.jpeg');
+    background-image: url('https://user-images.githubusercontent.com/87577172/176923718-9f5b311f-d5ad-42b9-a8be-714fe9eece18.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     /* background-position: 0px; */
@@ -150,7 +150,7 @@
     height: 9.375em;
     border-radius: 50%;
     margin-top: 1.25em;
-    background-image: url('../../public/assets/testimonio/1583f461e68bbf1bc0114994530ba6eaadb94248.jpeg');
+    background-image: url('https://user-images.githubusercontent.com/87577172/176923917-335828c4-0a7d-4884-8aaa-8ee94869909a.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0px;
