--- a/src/styles/verificados.css
+++ b/src/styles/verificados.css
@@ -27,6 +27,7 @@
      position: relative;
     width: 90%;
     text-align: center;
+     line-height: 35px;
 }
 .titulo__primero > h1::before {
     content: '';
